Fix favicons in urlbarView not showing

--- a/Profile Folder/chrome/styles/partials/chrome/chrome-1/_urlbar-searchbar.scss
+++ b/Profile Folder/chrome/styles/partials/chrome/chrome-1/_urlbar-searchbar.scss
@@ -103,7 +103,7 @@
 
 	.urlbarView-no-wrap {
 		&::before {
-			content: unset !important;
+			content: unset;
 		}
 	}
 	
@@ -253,8 +253,8 @@
 
 	&[breakout],
 	&[breakout][breakout-extend] {
-		left: var(--toolbarbutton-width) !important;
-		width: calc(100% - 2 * var(--toolbarbutton-width)) !important;
+		left: calc(var(--toolbarbutton-outer-padding) + var(--toolbarbutton-width)) !important;
+		width: calc(100% - 2 * var(--toolbarbutton-width) - var(--toolbarbutton-outer-padding)) !important;
 	}
 }
 
@@ -552,27 +552,6 @@
 
 .urlbarView-results {
 	padding: 0 !important;
-}
-
-#urlbar-results {
-	> .urlbarView-row {
-		&:first-of-type {
-			.urlbarView-no-wrap {
-				&::before {
-					content: var(--search-favicon);
-					position: absolute;
-					width: 16px;
-					height: 16px;
-					left: 3px;
-					top: 50%;
-					transform: translateY(-50%);
-				}
-			}
-			.urlbarView-favicon {
-				display: none;
-			}
-		}
-	}
 }
 
 .urlbarView-row {
