--- a/Profile Folder/chrome/styles/partials/chrome/chrome-3/_urlbar-searchbar.scss
+++ b/Profile Folder/chrome/styles/partials/chrome/chrome-3/_urlbar-searchbar.scss
@@ -12,6 +12,31 @@
 	width: calc(100% + 2 * var(--toolbarbutton-width)) !important;
 }
 
+#urlbar-results {
+	> .urlbarView-row {
+		&:first-of-type {
+			.urlbarView-no-wrap {
+				&::before {
+					content: var(--search-favicon);
+					position: absolute;
+					width: 16px;
+					height: 16px;
+					left: 3px;
+					top: 50%;
+					transform: translateY(-50%);
+				}
+			}
+			.urlbarView-favicon {
+				display: none;
+			}
+		}
+	}
+}
+
+.urlbarView-favicon {
+	display: flex;
+}
+
 .urlbarView-url {
 	padding-left: 24px !important;
 }
